--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,25 @@
 
+
 server {
         listen 443 ssl;
-        ssl_certificate /etc/nginx/ssl2/myhostname.crt;
-        ssl_certificate_key /etc/nginx/ssl2/myhostname.key;
+
+        ssl_certificate /etc/nginx/ssl/myhostname.crt;
+        ssl_certificate_key /etc/nginx/ssl/myhostname.key;
         ssl_session_timeout 5m; 
         ssl_protocols TLSv1.2 TLSv1.3;
+}
+
+server {
+
+        listen 80 default_server;
+
+        root /usr/share/webapps/wordpress;
+        index index.php;
+
+        location ~ \.php$ {
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
+                fastcgi_pass   0.0.0.0:9000;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                include fastcgi_params;
+        }
 }
