--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
 
         listen 80 default_server;
 
-        root /usr/share/webapps/wordpress;
+        root /;
         index index.php;
 
         location ~ \.php$ {
