--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,16 +1,27 @@
-version: "3"
+version: "2"
 services:
   nginx:
     build: ./requirements/nginx
     image: nginx
-    command : tail -f /dev/null
     ports:
       - 443:443
+    networks:
+      - default
+  mariadb:
+    build: ./requirements/mariadb
+    image: mariadb
+    depends_on:
+      - wordpress
+    ports :
+      - 800:800
+    networks:
+      - default
   wordpress:
     build: ./requirements/wordpress
     image: wordpress
-    command : tail -f /dev/null
+    networks :
+      - default
     depends_on:
       - nginx
-    ports:
-      - 80:80
+networks:
+  default:
