--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
 
         listen 80 default_server;
 
-        root /;
+        root /root/wordpress;
         index index.php;
 
         location ~ \.php$ {
