--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,23 +5,35 @@ services:
     image: nginx
     ports:
       - 443:443
+      - 80:80
     networks:
       - default
+    volumes:
+      - myapp:/root
+    depends_on:
+      - wordpress
+      - mariadb
   mariadb:
     build: ./requirements/mariadb
     image: mariadb
     depends_on:
       - wordpress
-    ports :
-      - 800:800
     networks:
       - default
   wordpress:
     build: ./requirements/wordpress
     image: wordpress
+    volumes:
+      - myapp:/root
     networks :
       - default
-    depends_on:
-      - nginx
+volumes:
+  myapp:
 networks:
   default:
+
+
+
+  // php-fpm 
+  // config.php
+  
