--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,10 +6,12 @@ run apk add nginx && \
       apk add openrc &&  openrc && touch /run/openrc/softlevel && \
       mkdir -p /etc/nginx/ssl && \
       nginx
-RUN echo "hello world"
 
 COPY host.crt /etc/nginx/ssl/myhostname.crt 
 COPY host.key /etc/nginx/ssl/myhostname.key 
 COPY nginx.conf /etc/nginx/http.d/default.conf
+copy nginx.sh .
 
-cmd ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["sh" , "nginx.sh"]
+
+cmd ["tail", "-f"]
