--- a/nginx.conf
+++ b/nginx.conf
@@ -7,13 +7,8 @@ server {
         ssl_certificate_key /etc/nginx/ssl/myhostname.key;
         ssl_session_timeout 5m;
         ssl_protocols TLSv1.2 TLSv1.3;
-}
 
-server {
-
-        listen 80 default_server;
-
-        root /;
+        root /wordpress;
         index index.php;
 
         location ~ \.php$ {
