--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,35 +5,23 @@ services:
     image: nginx
     ports:
       - 443:443
-      - 80:80
-    networks:
-      - default
     volumes:
-      - myapp:/root
+      - myapp:/wordpress
     depends_on:
       - wordpress
-      - mariadb
   mariadb:
     build: ./requirements/mariadb
     image: mariadb
-    depends_on:
-      - wordpress
-    networks:
-      - default
+    volumes:
+      - myapp:/wordpress
   wordpress:
     build: ./requirements/wordpress
     image: wordpress
     volumes:
-      - myapp:/root
-    networks :
-      - default
+      - myapp:/wordpress
+    depends_on:
+      - mariadb
 volumes:
   myapp:
 networks:
   default:
-
-
-
-  // php-fpm 
-  // config.php
-  
