--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -1,5 +1,4 @@
 
-
 server {
         listen 443 ssl;
 
@@ -7,18 +6,13 @@ server {
         ssl_certificate_key /etc/nginx/ssl/myhostname.key;
         ssl_session_timeout 5m;
         ssl_protocols TLSv1.2 TLSv1.3;
-}
 
-server {
-
-        listen 80 default_server;
-
-        root /root/wordpress;
+        root /wordpress;
         index index.php;
 
         location ~ \.php$ {
                 fastcgi_split_path_info ^(.+\.php)(/.+)$;
-                fastcgi_pass   0.0.0.0:9000;
+                fastcgi_pass   wordpress:9000;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 include fastcgi_params;
         }
