--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,13 +4,14 @@ run apk update && apk add vim openrc php-fpm php-mysqli curl php php-curl php-js
       curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
       chmod +x wp-cli.phar && \
       mv wp-cli.phar /usr/local/bin/wp && \
-      mkdir -p wordpress && cd wordpress && wp core download 
+      mkdir -p wordpress && cd wordpress && wp core download && cd /
 run openrc && touch /run/openrc/softlevel 
 
 
 copy wordpress.sh .
 copy ./wp-config.php /
 copy www.conf /etc/php81/php-fpm.d
+
 ENTRYPOINT ["sh" ,"wordpress.sh"]
 
 cmd [ "tail" , "-F"]
