--- a/srcs/requirements/mariadb/mariadb-server.cnf
+++ b/srcs/requirements/mariadb/mariadb-server.cnf
@@ -22,7 +22,7 @@ skip-networking=0
 #
 # Allow server to accept connections on all interfaces.
 #
-#bind-address=0.0.0.0
+bind-address=0.0.0.0
 #
 # Optional setting
 #wsrep_slave_threads=1
