--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,15 +10,21 @@ services:
     volumes:
       - myapp:/wordpress
     restart: always
+    env_file:
+      - ../.env
   mariadb:
     build: ./requirements/mariadb
     image: mariadb
     volumes:
-      - myapp:/wordpress
+      - mydata:/var/lib/mysql
     restart: always
+    env_file:
+      - ../.env
   wordpress:
     depends_on:
       - mariadb
+    env_file:
+      - ../.env
     build: ./requirements/wordpress
     image: wordpress
     volumes:
@@ -26,5 +32,6 @@ services:
     restart: always
 volumes:
   myapp:
+  mydata:
 networks:
   default:
