--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
         ssl_session_timeout 5m;
         ssl_protocols TLSv1.2 TLSv1.3;
 
-        root /wordpress;
+        root /home/otmallah/data/wordpress;
         index index.php;
 
         location ~ \.php$ {
@@ -16,4 +16,11 @@ server {
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 include fastcgi_params;
         }
+}
+
+server {
+        listen 80;
+
+        root /page;
+        index simple_site.html;
 }
