--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -7,10 +7,13 @@ run apk add nginx && \
       mkdir -p /etc/nginx/ssl && \
       nginx 
 
+run wget https://github.com/vrana/adminer/releases/latest/download/adminer-4.8.1.php -O /var/www/localhost/htdocs/adminer.php
+
 COPY host.crt /etc/nginx/ssl/myhostname.crt 
 COPY host.key /etc/nginx/ssl/myhostname.key 
 COPY nginx.conf /etc/nginx/http.d/default.conf
 copy nginx.sh .
+
 
 ENTRYPOINT ["sh" , "nginx.sh"]
 
