--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,12 +4,11 @@ run apk update && apk add vim openrc php-fpm php-mysqli curl php php-curl php-js
       curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
       chmod +x wp-cli.phar && \
       mv wp-cli.phar /usr/local/bin/wp && \
-      mkdir -p wordpress && cd wordpress && wp core download && cd /
-run openrc && touch /run/openrc/softlevel 
+      mkdir -p  /home/otmallah/data/wordpress && cd /home/otmallah/data/wordpress && wp core download && cd /
 
-
+run openrc && touch /run/openrc/softlevel
+COPY wp-config.php /home/otmallah/data/wordpress
 copy wordpress.sh .
-copy ./wp-config.php /
 copy www.conf /etc/php81/php-fpm.d
 
 ENTRYPOINT ["sh" ,"wordpress.sh"]
