--- a/srcs/requirements/bonus/simple_site/Dockerfile
+++ b/srcs/requirements/bonus/simple_site/Dockerfile
@@ -3,5 +3,6 @@ from alpine:3.17.0
 run apk update && apk add vim && mkdir page
 
 copy simple_site.html /page
+copy style.css /page
 
 cmd ["tail" , "-f"]
