--- a/srcs/requirements/bonus/redis/Dockerfile
+++ b/srcs/requirements/bonus/redis/Dockerfile
@@ -1,7 +1,9 @@
 from alpine:3.17
 
-run apk update && apk add redis && \
-    cd /home/otmallah/data/wordpress 
-    
+run apk update && apk add redis
+run apk add openrc && openrc
+run touch /run/openrc/softlevel
+run rc-service redis start
+run sed -i 's/bind 127.0.0.1 -::1/bind 0.0.0.0 -::1/' /etc/redis.conf
 
 cmd ["tail" , "-f"]
