--- a/srcs/requirements/bonus/ctop/Dockerfile
+++ b/srcs/requirements/bonus/ctop/Dockerfile
@@ -1,6 +1,6 @@
-from alpine:3.17.0
+FROM alpine:3.17.0
 
-run apk update 
-run apk add ctop
+RUN apk update 
+RUN apk add ctop
 
-cmd ["tail" , "-f"]
+CMD ["tail" , "-f"]
