--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -24,12 +24,15 @@ services:
     env_file:
       - ../.env
   ctop :
+    tty: true
     build : ./requirements/bonus/ctop
     image: ctop
     restart : always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   ftp :
+    env_file:
+      - ../.env
     build : ./requirements/bonus/ftp
     image: ftp
     restart : always
