--- a/srcs/requirements/bonus/simple_site/Dockerfile
+++ b/srcs/requirements/bonus/simple_site/Dockerfile
@@ -1,8 +1,8 @@
 FROM alpine:3.17.0
 
-RUN apk update && apk add vim && mkdir page
+RUN apk update && apk add vim nginx && mkdir page
 
 COPY simple_site.html /page
 COPY style.css /page
 
-CMD ["tail" , "-f"]
+CMD ["nginx" , "-g" , "daemon off;"]
