--- a/srcs/requirements/bonus/simple_site/Dockerfile
+++ b/srcs/requirements/bonus/simple_site/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:3.17.0
 
 RUN apk update && apk add vim nginx && mkdir page
 
-COPY simple_site.html /page
-COPY style.css /page
+COPY ./tools/simple_site.html /page
+COPY ./tools/style.css /page
 
 CMD ["nginx" , "-g" , "daemon off;"]
