--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,8 +3,8 @@ FROM alpine:3.17.0
 RUN apk update && apk add  openrc mysql  mysql-client  php-mysqli
 RUN openrc && touch /run/openrc/softlevel 
 
-COPY mariadb.sh .
-COPY mariadb-server.cnf /etc/my.cnf.d
+COPY ./tools/mariadb.sh .
+COPY ./tools/mariadb-server.cnf /etc/my.cnf.d
 
 ENTRYPOINT ["sh", "mariadb.sh"]
 
