--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,14 +6,10 @@ RUN apk add nginx && \
       apk add openrc &&  openrc && touch /run/openrc/softlevel && \
       mkdir -p /etc/nginx/ssl 
 
-RUN wget https://github.com/vrana/adminer/releases/latest/download/adminer-4.8.1.php -O /var/www/localhost/htdocs/adminer.php
-
-COPY host.crt /etc/nginx/ssl/myhostname.crt 
-COPY host.key /etc/nginx/ssl/myhostname.key 
-COPY nginx.conf /etc/nginx/http.d/default.conf
-COPY nginx.sh .
+COPY ./tools/host.crt /etc/nginx/ssl/myhostname.crt 
+COPY ./tools/host.key /etc/nginx/ssl/myhostname.key 
+COPY ./tools/nginx.conf /etc/nginx/http.d/default.conf
+COPY ./tools/nginx.sh .
 
 
 ENTRYPOINT ["sh" , "nginx.sh"]
-
-CMD ["tail" , "-f"]
